force-app/main/default/objects/AcctPlanContribution__c/AcctPlanContribution__c.object-meta.xml
<CustomObject>
    <description>Account Plan Contribution</description>
    <label>Account Plan Contribution</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AcctPlanContribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Contribution</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>