force-app/main/default/objects/AcctPlanContribution__c/fields/Account_Plan_Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Company_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Plan Company Profile</description>
    <label>Account Plan Company Profile</label>
    <referenceTo>AcctPlanCompanyProfile__c</referenceTo>
    <relationshipLabel>Account Plan Company Profile</relationshipLabel>
    <relationshipName>Account_Plan_Company_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>