force-app/main/default/objects/AcctPlanContribution__c/fields/AccountPlanGroupProfile__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanGroupProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Plan Group Profile</description>
    <label>Account Plan Group Profile</label>
    <referenceTo>AcctPlanGroupProfile__c</referenceTo>
    <relationshipLabel>Account Plan Contribution</relationshipLabel>
    <relationshipName>Account_Plan_Contribution</relationshipName>
    <type>Lookup</type>
</CustomField>