force-app/main/default/objects/AcctPlanContribution__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <description>Business Unit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Item of Buness Unit</inlineHelpText>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>