force-app/main/default/objects/AcctPlanContribution__c/fields/EBITDAContributionPercent__c.field-meta.xml
<CustomField>
    <fullName>EBITDAContributionPercent__c</fullName>
    <description>EBITDA Contribution Percent</description>
    <inlineHelpText>สัดส่วน EBITDA ต่อรายรับทั้งหมด ซึ่งจะเป็นรายรับในแต่ละประเภทของ contribution โดยค่าดังกล่าวบวกกันต้องไม่เกิน 100%</inlineHelpText>
    <label>EBITDA Contribution Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>