force-app/main/default/objects/AcctPlanContribution__c/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <label>Regional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>