force-app/main/default/objects/AcctPlanContribution__c/fields/RevenueContributionPercent__c.field-meta.xml
<CustomField>
    <fullName>RevenueContributionPercent__c</fullName>
    <description>Revenue Contribution Percent</description>
    <inlineHelpText>สัดส่วนของรายรับแยกเป็นประเภทตามหัวข้อ contribution ซึ่งเป็นเปอร์เซ็นต์ และมีการ force ให้ครบ 100% เสมอ</inlineHelpText>
    <label>Revenue Contribution Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>