force-app/main/default/objects/AcctPlanContribution__c/fields/RevenueContributionType__c.field-meta.xml
<CustomField>
    <fullName>RevenueContributionType__c</fullName>
    <description>Revenue Contribution Type</description>
    <inlineHelpText>List of Value for  Contribution by</inlineHelpText>
    <label>Revenue Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contribution by service &amp; product</fullName>
            </value>
            <value>
                <fullName>Contribution by business unit</fullName>
            </value>
            <value>
                <fullName>Contribution by regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>